code generation/eclipse project/monitor_gen/src/monitor_gen/StlDraftParser.java
// Generated from LTL_grammar/StlDraftParser.g4 by ANTLR 4.5

package monitor_gen;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class StlDraftParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LPAREN=1, RPAREN=2, LBRACE=3, RBRACE=4, LBRACK=5, RBRACK=6, SEMI=7, COMMA=8, 
		DOT=9, ASSIGN=10, GT=11, LT=12, EQUAL=13, LE=14, GE=15, NOTEQUAL=16, ADD=17, 
		SUB=18, MUL=19, DIV=20, TILDE=21, QUESTION=22, COLON=23, BANG=24, FLOAT_LITERAL=25, 
		ASSERTION=26, ALIAS=27, ALWAYS=28, PREVIOUS=29, EVENTUALLY=30, UNTIL=31, 
		HISTORICALLY=32, ONCE=33, SINCE=34, CONST=35, REAL=36, BOOL=37, INPUT=38, 
		OUTPUT=39, INTERNAL=40, TRUE=41, FALSE=42, OP_LOG_AND=43, OP_LOG_OR=44, 
		OP_LOG_XOR=45, OP_LOG_IMPLIES=46, OP_LOG_IIFF=47, OP_LOG_NOT=48, IDENTIFIER=49, 
		WS=50, COMMENT=51, LINE_COMMENT=52;
	public static final int
		RULE_stl_input = 0, RULE_assertion_decl = 1, RULE_bool_expression = 2, 
		RULE_previous_temporal_expression = 3, RULE_all_range_float_literal = 4, 
		RULE_open_float_literal_range = 5, RULE_close_float_literal_range = 6, 
		RULE_left_open_float_literal_range = 7, RULE_left_closed_float_literal_range = 8, 
		RULE_float_literal_range = 9, RULE_realComparison = 10, RULE_realExpression = 11, 
		RULE_constDeclaration = 12, RULE_varDeclaration = 13, RULE_floatNumber = 14, 
		RULE_boolValue = 15;
	public static final String[] ruleNames = {
		"stl_input", "assertion_decl", "bool_expression", "previous_temporal_expression", 
		"all_range_float_literal", "open_float_literal_range", "close_float_literal_range", 
		"left_open_float_literal_range", "left_closed_float_literal_range", "float_literal_range", 
		"realComparison", "realExpression", "constDeclaration", "varDeclaration", 
		"floatNumber", "boolValue"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','", "'.'", "'='", 
		"'>'", "'<'", "'=='", "'<='", "'>='", "'!='", "'+'", "'-'", "'*'", "'/'", 
		"'~'", "'?'", "':'", "'!'", null, "'assertion'", "'alias'", "'always'", 
		"'prev'", "'eventually'", "'until'", "'historically'", "'once'", "'since'", 
		"'const'", "'real'", "'bool'", "'input'", "'output'", "'internal'", "'true'", 
		"'false'", null, null, null, null, null, "'not'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", "SEMI", 
		"COMMA", "DOT", "ASSIGN", "GT", "LT", "EQUAL", "LE", "GE", "NOTEQUAL", 
		"ADD", "SUB", "MUL", "DIV", "TILDE", "QUESTION", "COLON", "BANG", "FLOAT_LITERAL", 
		"ASSERTION", "ALIAS", "ALWAYS", "PREVIOUS", "EVENTUALLY", "UNTIL", "HISTORICALLY", 
		"ONCE", "SINCE", "CONST", "REAL", "BOOL", "INPUT", "OUTPUT", "INTERNAL", 
		"TRUE", "FALSE", "OP_LOG_AND", "OP_LOG_OR", "OP_LOG_XOR", "OP_LOG_IMPLIES", 
		"OP_LOG_IIFF", "OP_LOG_NOT", "IDENTIFIER", "WS", "COMMENT", "LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "StlDraftParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public StlDraftParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Stl_inputContext extends ParserRuleContext {
		public List<ConstDeclarationContext> constDeclaration() {
			return getRuleContexts(ConstDeclarationContext.class);
		}
		public ConstDeclarationContext constDeclaration(int i) {
			return getRuleContext(ConstDeclarationContext.class,i);
		}
		public List<VarDeclarationContext> varDeclaration() {
			return getRuleContexts(VarDeclarationContext.class);
		}
		public VarDeclarationContext varDeclaration(int i) {
			return getRuleContext(VarDeclarationContext.class,i);
		}
		public List<Assertion_declContext> assertion_decl() {
			return getRuleContexts(Assertion_declContext.class);
		}
		public Assertion_declContext assertion_decl(int i) {
			return getRuleContext(Assertion_declContext.class,i);
		}
		public List<Bool_expressionContext> bool_expression() {
			return getRuleContexts(Bool_expressionContext.class);
		}
		public Bool_expressionContext bool_expression(int i) {
			return getRuleContext(Bool_expressionContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(StlDraftParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(StlDraftParser.SEMI, i);
		}
		public List<RealExpressionContext> realExpression() {
			return getRuleContexts(RealExpressionContext.class);
		}
		public RealExpressionContext realExpression(int i) {
			return getRuleContext(RealExpressionContext.class,i);
		}
		public Stl_inputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stl_input; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StlDraftParserListener ) ((StlDraftParserListener)listener).enterStl_input(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StlDraftParserListener ) ((StlDraftParserListener)listener).exitStl_input(this);
		}
	}

	public final Stl_inputContext stl_input() throws RecognitionException {
		Stl_inputContext _localctx = new Stl_inputContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_stl_input);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(41);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(32);
					constDeclaration();
					}
					break;
				case 2:
					{
					setState(33);
					varDeclaration();
					}
					break;
				case 3:
					{
					setState(34);
					assertion_decl();
					}
					break;
				case 4:
					{
					setState(35);
					bool_expression(0);
					setState(36);
					match(SEMI);
					}
					break;
				case 5:
					{
					setState(38);
					realExpression(0);
					setState(39);
					match(SEMI);
					}
					break;
				}
				}
				setState(43); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LPAREN) | (1L << SUB) | (1L << FLOAT_LITERAL) | (1L << ASSERTION) | (1L << ALWAYS) | (1L << PREVIOUS) | (1L << EVENTUALLY) | (1L << HISTORICALLY) | (1L << ONCE) | (1L << CONST) | (1L << REAL) | (1L << BOOL) | (1L << TRUE) | (1L << FALSE) | (1L << OP_LOG_NOT) | (1L << IDENTIFIER))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assertion_declContext extends ParserRuleContext {
		public TerminalNode ASSERTION() { return getToken(StlDraftParser.ASSERTION, 0); }
		public TerminalNode IDENTIFIER() { return getToken(StlDraftParser.IDENTIFIER, 0); }
		public TerminalNode COLON() { return getToken(StlDraftParser.COLON, 0); }
		public Bool_expressionContext bool_expression() {
			return getRuleContext(Bool_expressionContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(StlDraftParser.SEMI, 0); }
		public Assertion_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assertion_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StlDraftParserListener ) ((StlDraftParserListener)listener).enterAssertion_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StlDraftParserListener ) ((StlDraftParserListener)listener).exitAssertion_decl(this);
		}
	}

	public final Assertion_declContext assertion_decl() throws RecognitionException {
		Assertion_declContext _localctx = new Assertion_declContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_assertion_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			match(ASSERTION);
			setState(46);
			match(IDENTIFIER);
			setState(47);
			match(COLON);
			setState(48);
			bool_expression(0);
			setState(49);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Bool_expressionContext extends ParserRuleContext {
		public Bool_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bool_expression; }
	 
		public Bool_expressionContext() { }
		public void copyFrom(Bool_expressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class LogOnceContext extends Bool_expressionContext {
		public TerminalNode ONCE() { return getToken(StlDraftParser.ONCE, 0); }
		public Bool_expressionContext bool_expression() {
			return getRuleContext(Bool_expressionContext.class,0);
		}
		public All_range_float_literalContext all_range_float_literal() {
			return getRuleContext(All_range_float_literalContext.class,0);
		}
		public LogOnceContext(Bool_expressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StlDraftParserListener ) ((StlDraftParserListener)listener).enterLogOnce(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StlDraftParserListener ) ((StlDraftParserListener)listener).exitLogOnce(this);
		}
	}
	public static class LogHistoricallyContext extends Bool_expressionContext {
		public TerminalNode HISTORICALLY() { return getToken(StlDraftParser.HISTORICALLY, 0); }
		public Bool_expressionContext bool_expression() {
			return getRuleContext(Bool_expressionContext.class,0);
		}
		public All_range_float_literalContext all_range_float_literal() {
			return getRuleContext(All_range_float_literalContext.class,0);
		}
		public LogHistoricallyContext(Bool_expressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StlDraftParserListener ) ((StlDraftParserListener)listener).enterLogHistorically(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StlDraftParserListener ) ((StlDraftParserListener)listener).exitLogHistorically(this);
		}
	}
	public static class LogEventuallyContext extends Bool_expressionContext {
		public TerminalNode EVENTUALLY() { return getToken(StlDraftParser.EVENTUALLY, 0); }
		public Bool_expressionContext bool_expression() {
			return getRuleContext(Bool_expressionContext.class,0);
		}
		public All_range_float_literalContext all_range_float_literal() {
			return getRuleContext(All_range_float_literalContext.class,0);
		}
		public LogEventuallyContext(Bool_expressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StlDraftParserListener ) ((StlDraftParserListener)listener).enterLogEventually(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StlDraftParserListener ) ((StlDraftParserListener)listener).exitLogEventually(this);
		}
	}
	public static class LogUntilContext extends Bool_expressionContext {
		public List<Bool_expressionContext> bool_expression() {
			return getRuleContexts(Bool_expressionContext.class);
		}
		public Bool_expressionContext bool_expression(int i) {
			return getRuleContext(Bool_expressionContext.class,i);
		}
		public TerminalNode UNTIL() { return getToken(StlDraftParser.UNTIL, 0); }
		public All_range_float_literalContext all_range_float_literal() {
			return getRuleContext(All_range_float_literalContext.class,0);
		}
		public LogUntilContext(Bool_expressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StlDraftParserListener ) ((StlDraftParserListener)listener).enterLogUntil(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StlDraftParserListener ) ((StlDraftParserListener)listener).exitLogUntil(this);
		}
	}
	public static class LogXorContext extends Bool_expressionContext {
		public List<Bool_expressionContext> bool_expression() {
			return getRuleContexts(Bool_expressionContext.class);
		}
		public Bool_expressionContext bool_expression(int i) {
			return getRuleContext(Bool_expressionContext.class,i);
		}
		public TerminalNode OP_LOG_XOR() { return getToken(StlDraftParser.OP_LOG_XOR, 0); }
		public LogXorContext(Bool_expressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StlDraftParserListener ) ((StlDraftParserListener)listener).enterLogXor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StlDraftParserListener ) ((StlDraftParserListener)listener).exitLogXor(this);
		}
	}
	public static class LogSinceContext extends Bool_expressionContext {
		public List<Bool_expressionContext> bool_expression() {
			return getRuleContexts(Bool_expressionContext.class);
		}
		public Bool_expressionContext bool_expression(int i) {
			return getRuleContext(Bool_expressionContext.class,i);
		}
		public TerminalNode SINCE() { return getToken(StlDraftParser.SINCE, 0); }
		public All_range_float_literalContext all_range_float_literal() {
			return getRuleContext(All_range_float_literalContext.class,0);
		}
		public LogSinceContext(Bool_expressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StlDraftParserListener ) ((StlDraftParserListener)listener).enterLogSince(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StlDraftParserListener ) ((StlDraftParserListener)listener).exitLogSince(this);
		}
	}
	public static class LogImpliesContext extends Bool_expressionContext {
		public List<Bool_expressionContext> bool_expression() {
			return getRuleContexts(Bool_expressionContext.class);
		}
		public Bool_expressionContext bool_expression(int i) {
			return getRuleContext(Bool_expressionContext.class,i);
		}
		public TerminalNode OP_LOG_IMPLIES() { return getToken(StlDraftParser.OP_LOG_IMPLIES, 0); }
		public LogImpliesContext(Bool_expressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StlDraftParserListener ) ((StlDraftParserListener)listener).enterLogImplies(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StlDraftParserListener ) ((StlDraftParserListener)listener).exitLogImplies(this);
		}
	}
	public static class LogAlwaysContext extends Bool_expressionContext {
		public TerminalNode ALWAYS() { return getToken(StlDraftParser.ALWAYS, 0); }
		public Bool_expressionContext bool_expression() {
			return getRuleContext(Bool_expressionContext.class,0);
		}
		public All_range_float_literalContext all_range_float_literal() {
			return getRuleContext(All_range_float_literalContext.class,0);
		}
		public LogAlwaysContext(Bool_expressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StlDraftParserListener ) ((StlDraftParserListener)listener).enterLogAlways(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StlDraftParserListener ) ((StlDraftParserListener)listener).exitLogAlways(this);
		}
	}
	public static class BoolLiteralContext extends Bool_expressionContext {
		public BoolValueContext boolValue() {
			return getRuleContext(BoolValueContext.class,0);
		}
		public BoolLiteralContext(Bool_expressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StlDraftParserListener ) ((StlDraftParserListener)listener).enterBoolLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StlDraftParserListener ) ((StlDraftParserListener)listener).exitBoolLiteral(this);
		}
	}
	public static class BoolExprRealComparisonContext extends Bool_expressionContext {
		public RealComparisonContext realComparison() {
			return getRuleContext(RealComparisonContext.class,0);
		}
		public BoolExprRealComparisonContext(Bool_expressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StlDraftParserListener ) ((StlDraftParserListener)listener).enterBoolExprRealComparison(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StlDraftParserListener ) ((StlDraftParserListener)listener).exitBoolExprRealComparison(this);
		}
	}
	public static class LogAndContext extends Bool_expressionContext {
		public List<Bool_expressionContext> bool_expression() {
			return getRuleContexts(Bool_expressionContext.class);
		}
		public Bool_expressionContext bool_expression(int i) {
			return getRuleContext(Bool_expressionContext.class,i);
		}
		public TerminalNode OP_LOG_AND() { return getToken(StlDraftParser.OP_LOG_AND, 0); }
		public LogAndContext(Bool_expressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StlDraftParserListener ) ((StlDraftParserListener)listener).enterLogAnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StlDraftParserListener ) ((StlDraftParserListener)listener).exitLogAnd(this);
		}
	}
	public static class LogNotContext extends Bool_expressionContext {
		public TerminalNode OP_LOG_NOT() { return getToken(StlDraftParser.OP_LOG_NOT, 0); }
		public Bool_expressionContext bool_expression() {
			return getRuleContext(Bool_expressionContext.class,0);
		}
		public LogNotContext(Bool_expressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StlDraftParserListener ) ((StlDraftParserListener)listener).enterLogNot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StlDraftParserListener ) ((StlDraftParserListener)listener).exitLogNot(this);
		}
	}
	public static class LogIffContext extends Bool_expressionContext {
		public List<Bool_expressionContext> bool_expression() {
			return getRuleContexts(Bool_expressionContext.class);
		}
		public Bool_expressionContext bool_expression(int i) {
			return getRuleContext(Bool_expressionContext.class,i);
		}
		public TerminalNode OP_LOG_IIFF() { return getToken(StlDraftParser.OP_LOG_IIFF, 0); }
		public LogIffContext(Bool_expressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StlDraftParserListener ) ((StlDraftParserListener)listener).enterLogIff(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StlDraftParserListener ) ((StlDraftParserListener)listener).exitLogIff(this);
		}
	}
	public static class BoolIdContext extends Bool_expressionContext {
		public TerminalNode IDENTIFIER() { return getToken(StlDraftParser.IDENTIFIER, 0); }
		public BoolIdContext(Bool_expressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StlDraftParserListener ) ((StlDraftParserListener)listener).enterBoolId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StlDraftParserListener ) ((StlDraftParserListener)listener).exitBoolId(this);
		}
	}
	public static class BoolParensContext extends Bool_expressionContext {
		public TerminalNode LPAREN() { return getToken(StlDraftParser.LPAREN, 0); }
		public Bool_expressionContext bool_expression() {
			return getRuleContext(Bool_expressionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(StlDraftParser.RPAREN, 0); }
		public BoolParensContext(Bool_expressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StlDraftParserListener ) ((StlDraftParserListener)listener).enterBoolParens(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StlDraftParserListener ) ((StlDraftParserListener)listener).exitBoolParens(this);
		}
	}
	public static class LogPreviousContext extends Bool_expressionContext {
		public Previous_temporal_expressionContext previous_temporal_expression() {
			return getRuleContext(Previous_temporal_expressionContext.class,0);
		}
		public LogPreviousContext(Bool_expressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StlDraftParserListener ) ((StlDraftParserListener)listener).enterLogPrevious(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StlDraftParserListener ) ((StlDraftParserListener)listener).exitLogPrevious(this);
		}
	}
	public static class LogOrContext extends Bool_expressionContext {
		public List<Bool_expressionContext> bool_expression() {
			return getRuleContexts(Bool_expressionContext.class);
		}
		public Bool_expressionContext bool_expression(int i) {
			return getRuleContext(Bool_expressionContext.class,i);
		}
		public TerminalNode OP_LOG_OR() { return getToken(StlDraftParser.OP_LOG_OR, 0); }
		public LogOrContext(Bool_expressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StlDraftParserListener ) ((StlDraftParserListener)listener).enterLogOr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StlDraftParserListener ) ((StlDraftParserListener)listener).exitLogOr(this);
		}
	}
	public static class LogAssignContext extends Bool_expressionContext {
		public List<Bool_expressionContext> bool_expression() {
			return getRuleContexts(Bool_expressionContext.class);
		}
		public Bool_expressionContext bool_expression(int i) {
			return getRuleContext(Bool_expressionContext.class,i);
		}
		public TerminalNode ASSIGN() { return getToken(StlDraftParser.ASSIGN, 0); }
		public LogAssignContext(Bool_expressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StlDraftParserListener ) ((StlDraftParserListener)listener).enterLogAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StlDraftParserListener ) ((StlDraftParserListener)listener).exitLogAssign(this);
		}
	}

	public final Bool_expressionContext bool_expression() throws RecognitionException {
		return bool_expression(0);
	}

	private Bool_expressionContext bool_expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Bool_expressionContext _localctx = new Bool_expressionContext(_ctx, _parentState);
		Bool_expressionContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_bool_expression, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				_localctx = new LogNotContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
